# ceremoni

./: .env.example  .gitignore  Dockerfile  README.md  ceremony.yaml  pyproject.toml  run.py
app/: auth.py  config.py  db.py  tasks.py  worker.py
app/api/: admin_routes.py  main.py  routes.py
app/models/: __init__.py  ceremony.py  recording.py  student.py
app/services/: audio_processor.py  config_loader.py  forms_sync.py  phonetic_converter.py  pipeline.py  storage.py  transcriber.py  tts_generator.py
app/static/: dashboard.js  style.css
app/templates/: dashboard.html  login.html
