[project]
name = "ceremoni"
version = "0.1.0"
description = "AI Graduation Name Pronunciation Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "pydub>=0.25.1",
    "noisereduce>=3.0.0",
    "numpy>=1.26.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "openai>=1.0.0",
    "msal>=1.28.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
